# Magnet

./: Cargo.toml  README.md
examples/: README.md
examples/nexus/: Magnet.toml
examples/nexus/project1/: Magnet.toml
examples/nexus/project1/crates/api/: Cargo.toml  Magnet.toml
examples/nexus/project1/crates/api/src/: lib.rs
examples/nexus/project2/: Magnet.toml
examples/nexus/project2/crates/service/: Magnet.toml
examples/nexus/project2/crates/service/src/: lib.rs
examples/nexus/shared-lib/crates/shared-types/: Magnet.toml
examples/nexus/shared-lib/crates/shared-types/src/: lib.rs
examples/workspace/: README.md
examples/workspace/crates/shared-types/: Cargo.toml  Magnet.toml
examples/workspace/crates/shared-utils/: Cargo.toml  Magnet.toml
examples/workspace/crates/shared-utils/src/: lib.rs
src/: generator.rs  lib.rs  main.rs  manager.rs  utils.rs
src/commands/: check.rs  export.rs  generate.rs  init.rs  mod.rs  submodule.rs  tree.rs  utils.rs
src/configs/: dependency.rs  mod.rs  nexus.rs  package.rs  workspace.rs
src/models/: crate.rs  dependency.rs  mod.rs  nexus.rs  package.rs  patch.rs  workspace.rs
tests/: test_cli.rs  test_magnet_config.rs
